--- a/admin-client/src/styles/scss/main.scss
+++ b/admin-client/src/styles/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./pages/game/game.mobile";
 
 body {
+  position: relative;
   font-family: $pri-font;
   overflow-x: hidden;
   background: $pri-bg;
@@ -20,8 +21,8 @@ body {
 
 // Shadow
 .shadow-container {
-  z-index: 1000;
   position: fixed;
+  z-index: 1000;
   top: 0;
   left: 0;
   right: 0;
